--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Molly Phelan & Isaac Rothenbaum</title>
+    <title>K I S S I N G</title>
     <link href="https://fonts.googleapis.com/css?family=Nunito|Parisienne" rel="stylesheet">
     <link rel="stylesheet" href="./css/index.css">
 
@@ -26,11 +26,14 @@
         <a id="logo" href="#">
             <span>M</span><sub>&</sub><span>I</span>
         </a>
-        <div>
-            <a href="#story">Our Story</a>
-            <a href="#details">Wedding Details</a>
-            <a href="#rsvp">RSVP</a>
-            <a href="#registry">Registry</a>
+        <div id="hamburger"></div>
+        <div id="nav-container-outer">
+            <div id="nav-container">
+                <a href="#story">Our Story</a>
+                <a href="#details">Wedding Details</a>
+                <a href="#rsvp">RSVP</a>
+                <a href="#registry">Registry</a>
+            </div>
         </div>
     </header>
     <div id="hero">
@@ -71,7 +74,7 @@
                 <li>
                     <h4>March 15th, 2017</h4>
                     <p>
-                        Spending almost every moment together, Molly and Isaac decided to save some money and move in together.
+                        Spending almost every moment together, Molly and Isaac decided to move in together.
                         They found a cute little apartment in the Lower East Side with a balcony so they could watch dumplings
                         being prepared across the street at their soon-to-be favorite dumpling spot,
                         <a href="http://www.shujiaofuzhou.com/" class="link" target="_blank">Shu Jiao Fu Zhou</a>
@@ -188,7 +191,7 @@
             <h2>RSVP</h2>
 
             <div id="enter-email-form">
-                <p>Please enter the email address you received your invite too</p>
+                <p>Please enter the email address to which you received your invite</p>
                 <div class="input-container">
                     <label>Email address</label>
                     <input id="email-input" type="text" placeholder="johndoe@example.com">
