--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                         We can't find your invite.
                         Make sure you enter the email address you received the invitation to.
                         <br>
-                        If you're sure you're doing everything correctly, now worries!
+                        If you're sure you're doing everything correctly, no worries!
                         Just <a class="link" href="tel:+17082207614">give us a call</a>
                         or <a class="link" href="mailto:irothenbaum@gmail.com">send us an email</a>
                         to RSVP.
