email address fix

--- a/index.html
+++ b/index.html
@@ -143,7 +143,9 @@
                                     Le M&eacute;ridien Philadelphia
                                 </a>
                                 <div>
+                                    Saturday night only.
                                     Book via <a class="link" target="_blank" href="https://www.marriott.com/events/start.mi?id=1551203686231&key=GRP">this link</a>.
+                                    Remember to set the dates before clicking Check Availability
                                 </div>
                             </li>
                             <li>
@@ -151,6 +153,7 @@
                                     Courtyard Philadelphia
                                 </a>
                                 <div>
+                                    Rooms for Friday and Saturday
                                     Call Marriott Reservations at 1(800) 321-2211 or (215) 496-3200
                                     and say you're part of the "Isaac Rothenbaum" group
                                     staying at the Courtyard Philadelphia Downtown
@@ -159,6 +162,7 @@
                             <li>
                                 <a class="link" target="_blank" href="https://www.guestreservations.com/holiday-inn-express-philadelphia-midtown/booking">Holiday Inn Midtown</a>
                                 <div>
+                                    Saturday night only.
                                     Call <a class="link" href="tel:+18887525341">888-752-5341</a>
                                     and say you're with "Rothenbaum Wedding" or use the block code "RTH"
                                 </div>
@@ -166,6 +170,7 @@
                             <li>
                                 <a class="link" target="_blank" href="https://www.ihg.com/holidayinnexpress/hotels/us/en/philadelphia/phlpl/hoteldetail">Holiday Inn Penns Landing</a>
                                 <div>
+                                    Saturday night only.
                                     Call <a class="link" href="tel:+18008432355">1-800-843-2355</a> and ask for the
                                     "Phelan-Rothenbaum Wedding" or use code "PHE"
                                 </div>
@@ -173,6 +178,7 @@
                             <li>
                                 <a class="link" target="_blank" href="https://www.wyndhamhotels.com/days-inn/philadelphia-pennsylvania/days-inn-philadelphia-convention-center/overview?CID=LC:DI:20160927:RIO:Local:SM-dimatl">Days Inn</a>
                                 <div>
+                                    Rooms for Friday and Saturday, single and double rooms available.
                                     Call <a class="link" href="tel:+18773612506">877-361-2506</a>
                                     and reference reservation #5136B96068981
                                     or use block name "Rothenbaum/Phelan Wedding"
