added date and calendar invite

--- a/index.html
+++ b/index.html
@@ -108,6 +108,12 @@
 
             <ul>
                 <li class="with-extra-details">
+                    <strong>When:</strong>
+                    <div>
+                        <a class="link" target="_blank" href="./molly_and_isaac_wedding.ics">Saturday, October 19<sup>th</sup>, 2019 in Philadelphia</a>
+                    </div>
+                </li>
+                <li class="with-extra-details">
                     <strong>Ceremony:</strong>
                     <div>
                         TBD (please check back here for updates!)
@@ -143,7 +149,7 @@
                                     Le M&eacute;ridien Philadelphia
                                 </a>
                                 <div>
-                                    Saturday night only.
+                                    Friday and Saturday night. (This is where Molly and Isaac will be staying!)
                                     Book via <a class="link" target="_blank" href="https://www.marriott.com/events/start.mi?id=1551203686231&key=GRP">this link</a>.
                                     Remember to set the dates before clicking Check Availability
                                 </div>
