--- a/index.html
+++ b/index.html
@@ -116,17 +116,19 @@
                 <li class="with-extra-details">
                     <strong>Ceremony:</strong>
                     <div>
-                        TBD (please check back here for updates!)
+                        3 PM <br />
+                        @ <a class="link" target="_blank" href="https://www.stcb-southphila.com/">St. Charles Borromeo</a><br />
+                        <a class="link" target="_blank" href="https://goo.gl/maps/7kY6xUt8RpBEFj7u9">902 South 20th  Street, Philadelphia 19146</a>
                     </div>
                 </li>
                 <li class="with-extra-details">
                     <strong>Reception:</strong>
                     <div>
                         6:00 PM to 10:00 PM<br />
-                        @ <a class="link" href="https://yardsbrewing.com/">Yards Brewing Company</a><br />
-                        <a class="link" href="https://goo.gl/maps/WKFgw2Z1dum">500 Spring Garden St, Philadelphia, PA 19123</a><br />
+                        @ <a class="link" target="_blank" href="https://yardsbrewing.com/">Yards Brewing Company</a><br />
+                        <a class="link" target="_blank" href="https://goo.gl/maps/WKFgw2Z1dum">500 Spring Garden St, Philadelphia, PA 19123</a><br />
                         <br />
-                        Please <a href="#rsvp">let us know</a> if you can attend by <strong>July 19, 2019</strong>.
+                        Please <a href="#rsvp">let us know</a> if you can attend by <strong>July 19, 2019</strong>
                     </div>
                 </li>
                 <li class="with-extra-details">
