Added some round 2 peeps

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         @ <a class="link" target="_blank" href="https://yardsbrewing.com/">Yards Brewing Company</a><br />
                         <a class="link" target="_blank" href="https://goo.gl/maps/WKFgw2Z1dum">500 Spring Garden St, Philadelphia, PA 19123</a><br />
                         <br />
-                        Please <a href="#rsvp">let us know</a> if you can attend by <strong>July 19, 2019</strong>
+                        Please <a href="#rsvp">let us know</a> if you can attend by <strong>August 30th, 2019</strong>
                     </div>
                 </li>
                 <li class="with-extra-details">
