Rehearsal dinner info

--- a/index.html
+++ b/index.html
@@ -106,6 +106,37 @@
                 We’re so excited to share this day with you! Please see details below:
             </p>
 
+            <h3>Rehearsal</h3>
+            <p>
+                If you have a role in the ceremonial portion of the wedding, you presence is graciously requested on Friday evening for practice
+                <br/> with dinner to follow.
+            </p>
+            <ul>
+                <li class="with-extra-details">
+                    <strong>When:</strong>
+                    <div>
+                        Friday, October 18<sup>th</sup>, 2019 in Philadelphia
+                    </div>
+                </li>
+                <li class="with-extra-details">
+                    <strong>Rehearsal:</strong>
+                    <div>
+                        5 PM <br />
+                        @ <a class="link" target="_blank" href="https://www.stcb-southphila.com/">St. Charles Borromeo</a><br />
+                        <a class="link" target="_blank" href="https://goo.gl/maps/7kY6xUt8RpBEFj7u9">902 South 20th  Street, Philadelphia 19146</a>
+                    </div>
+                </li>
+                <li class="with-extra-details">
+                    <strong>Dinner:</strong>
+                    <div>
+                        6:30 PM <br />
+                        @ <a class="link" target="_blank" href="https://valanni.com/">Valanni</a><br />
+                        <a class="link" target="_blank" href="https://goo.gl/maps/4FS8keLk5mQJt8Di8">1229 Spruce Street, Philadelphia 19107</a>
+                    </div>
+                </li>
+            </ul>
+
+            <h3>Reception</h3>
             <ul>
                 <li class="with-extra-details">
                     <strong>When:</strong>
