Added after party and stuff

--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
                         3 PM <br />
                         @ <a class="link" target="_blank" href="https://www.stcb-southphila.com/">St. Charles Borromeo</a><br />
                         <a class="link" target="_blank" href="https://goo.gl/maps/7kY6xUt8RpBEFj7u9">902 South 20th  Street, Philadelphia 19146</a>
+                        <p><strong>Please note:</strong> There isn't a parking lot at the church so we recommend taking a Lyft/Uber.</p>
                     </div>
                 </li>
                 <li class="with-extra-details">
@@ -160,6 +161,12 @@
                         <a class="link" target="_blank" href="https://goo.gl/maps/WKFgw2Z1dum">500 Spring Garden St, Philadelphia, PA 19123</a><br />
                         <br />
                         Please <a href="#rsvp">let us know</a> if you can attend by <strong>August 30th, 2019</strong>
+                    </div>
+                </li>
+                <li class="with-extra-details">
+                    <strong>Attire:</strong>
+                    <div>
+                        Wedding cocktail attire (as fancy as you'd like) -- think <em>suits with ties</em> for men.
                     </div>
                 </li>
                 <li class="with-extra-details">
@@ -214,16 +221,27 @@
                                     "Phelan-Rothenbaum Wedding" or use code "PHE"
                                 </div>
                             </li>
-                            <li>
-                                <a class="link" target="_blank" href="https://www.wyndhamhotels.com/days-inn/philadelphia-pennsylvania/days-inn-philadelphia-convention-center/overview?CID=LC:DI:20160927:RIO:Local:SM-dimatl">Days Inn</a>
-                                <div>
-                                    Rooms for Friday and Saturday, single and double rooms available.
-                                    Call <a class="link" href="tel:+18773612506">877-361-2506</a>
-                                    and reference reservation #5136B96068981
-                                    or use block name "Rothenbaum/Phelan Wedding"
-                                </div>
-                            </li>
                         </ul>
+                    </div>
+                </li>
+            </ul>
+
+            <h3>After Party!</h3>
+            <p>
+                Everyone's invited!
+            </p>
+            <ul>
+                <li class="with-extra-details">
+                    <strong>When:</strong>
+                    <div>
+                        10 PM onwards
+                    </div>
+                </li>
+                <li class="with-extra-details">
+                    <strong>Where:</strong>
+                    <div>
+                        <a class="link" target="_blank" href="https://tirnanogphilly.com/">Tir na Nog</a><br />
+                        <a class="link" target="_blank" href="https://goo.gl/maps/uBzuZFwA5XZcTpih7">902 South 20th  Street, Philadelphia 19146</a>
                     </div>
                 </li>
             </ul>
