--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 </li>
             </ul>
 
-            <h3>Reception</h3>
+            <h3>Wedding</h3>
             <ul>
                 <li class="with-extra-details">
                     <strong>When:</strong>
@@ -241,7 +241,7 @@
                     <strong>Where:</strong>
                     <div>
                         <a class="link" target="_blank" href="https://tirnanogphilly.com/">Tir na Nog</a><br />
-                        <a class="link" target="_blank" href="https://goo.gl/maps/uBzuZFwA5XZcTpih7">902 South 20th  Street, Philadelphia 19146</a>
+                        <a class="link" target="_blank" href="https://goo.gl/maps/uBzuZFwA5XZcTpih7">1600 Arch St, Philadelphia, PA 19103</a>
                     </div>
                 </li>
             </ul>
