Updated homepage pics

--- a/index.html
+++ b/index.html
@@ -23,12 +23,18 @@
 
     <script type="text/javascript">
         window.__GALLERY_ITEMS = [
-            "/reception/622_0804.jpg",
-            "/reception/622_0808.jpg",
-            "/reception/622_0844.jpg",
-            "/reception/622_0831.jpg",
+            "/favorites/622_0027.jpg",
+            "/favorites/622_0028.jpg",
+            "/favorites/622_0036.jpg",
+            "/favorites/622_0039.jpg",
+            "/favorites/622_0067.jpg",
+            "/favorites/622_0077.jpg",
+            "/favorites/622_0101.jpg",
+            "/favorites/622_0106.jpg",
+            "/wedding_party/622_0667.jpg",
             "/reception/622_0854.jpg",
-            "/reception/622_0856.jpg"
+            "/reception/622_0866.jpg",
+            "/reception/622_1011.jpg",
         ]
     </script>
 
