--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="manifest" href="./site.webmanifest">
     <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#5d415b">
 
     <script
             src="https://code.jquery.com/jquery-3.3.1.min.js"
@@ -48,7 +48,7 @@
         <div id="hamburger"></div>
         <div id="nav-container-outer">
             <div id="nav-container">
-                <a href="#pics">Wedding Pics</a>
+                <a href="#pics">Pics &amp; Vids</a>
                 <a href="#story">Our Story</a>
                 <a href="#details">Wedding Details</a>
                 <!--<a href="#rsvp">RSVP</a>-->
@@ -72,13 +72,13 @@
             <h2>Wedding Pics &amp; Videos</h2>
             <p>
                 Thanks to everyone who celebrated with us! Your presence helped to make it the special, unforgettable day that it was.
-                Check out some of our favorite pictures and videos from the ceremony, reception, and beyond.
+                Check out some of our favorite pictures from the ceremony, reception, and beyond.
             </p>
 
             <div id="picture-gallery">
             </div>
             <div id="see-all-pics-message">
-                <a class="link" href="./pics.html">Click here</a> to see all the pictures!
+                <a class="link" href="./pics.html">Click here</a> to see all the pictures and videos!
             </div>
         </section>
     </div>
