--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
 
     <script type="text/javascript">
         window.__GALLERY_ITEMS = [
+            "/videos/Highlight+reel.mp4",
             "/favorites/622_0027.jpg",
             "/favorites/622_0028.jpg",
             "/favorites/622_0036.jpg",
-            "/favorites/622_0039.jpg",
+            // "/favorites/622_0039.jpg",
             "/favorites/622_0067.jpg",
             "/favorites/622_0077.jpg",
             "/favorites/622_0101.jpg",
